--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "project",
+  "name": "my-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "A secure Node.js API with MongoDB and Heroku deployment",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^6.0.0",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "express-validator": "^7.2.1",
-    "mongoose": "^8.19.0"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "mongoose": "^7.5.0"
   }
 }
